MFB: Fixed bug #46696 (cURL fails in upload files with specified content-type)